[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/level1.gd" type="Script" id=1]
[ext_resource path="res://Assets/TileSets/16x/forest_16x.tres" type="TileSet" id=2]
[ext_resource path="res://Scene/dynamic_foliage.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/Foliage/grass1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Foliage/grass2.png" type="Texture" id=5]

[node name="level1" type="Node2D"]

editor/display_folded = true
script = ExtResource( 1 )
camera_zoom = 1

[node name="tilemapSolid" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 3
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 65555, 6, 0, 65556, 6, 1, 65557, 6, 1, 65558, 536870918, 1, 65559, 6, 1, 65560, 6, 1, 65561, 6, 1, 65562, 6, 1, 65563, 6, 1, 65564, 6, 2, 65568, 6, 0, 65569, 6, 1, 65570, 6, 1, 65571, 6, 2, 131072, 536870916, 0, 131091, 6, 65536, 131092, 6, 65537, 131093, 6, 65537, 131094, 536870918, 65537, 131095, 6, 65537, 131096, 536870918, 65537, 131097, 6, 65537, 131098, 6, 65537, 131099, 6, 131073, 131100, 6, 131074, 131104, 6, 131072, 131105, 6, 65537, 131106, 6, 65537, 131107, 6, 65538, 196622, 4, 0, 196627, 6, 65536, 196628, 6, 65537, 196629, 6, 65537, 196630, 536870918, 65537, 196631, 6, 65537, 196632, 6, 65537, 196633, 6, 65537, 196634, 6, 131074, 196641, 6, 65536, 196642, 6, 65537, 196643, 6, 65538, 262163, 6, 65536, 262164, 6, 65537, 262165, 6, 65537, 262166, 536870918, 65537, 262167, 6, 65537, 262168, 6, 65537, 262169, 6, 65538, 262177, 6, 65536, 262178, 6, 65537, 262179, 6, 65538, 327682, 1, 0, 327683, 0, 0, 327698, 6, 0, 327699, 6, 65537, 327700, 6, 65537, 327701, 6, 65537, 327702, 536870918, 65537, 327703, 6, 65537, 327704, 6, 65537, 327705, 6, 65538, 327713, 6, 131072, 327714, 6, 131073, 327715, 6, 131074, 393216, 6, 0, 393217, 6, 1, 393218, 6, 1, 393219, 6, 1, 393220, 6, 2, 393223, 1, 0, 393224, 3, 0, 393225, 2, 0, 393227, 5, 0, 393229, 3, 0, 393230, 2, 0, 393234, 6, 65536, 393235, 6, 65537, 393236, 6, 65537, 393237, 6, 65537, 393238, 536870918, 65537, 393239, 6, 65537, 393240, 6, 65537, 393241, 6, 65538, 458752, 6, 65536, 458753, 6, 65537, 458754, 6, 65537, 458755, 6, 65537, 458756, 6, 65537, 458757, 6, 1, 458758, 6, 1, 458759, 6, 1, 458760, 6, 1, 458761, 6, 1, 458762, 6, 1, 458763, 6, 1, 458764, 6, 1, 458765, 6, 1, 458766, 6, 1, 458767, 6, 1, 458768, 6, 1, 458769, 6, 1, 458770, 6, 65537, 458771, 6, 65537, 458772, 6, 65537, 458773, 6, 65537, 458774, 536870918, 65537, 458775, 6, 65537, 458776, 6, 65537, 458777, 6, 65538, 524288, 6, 65536, 524289, 6, 65537, 524290, 6, 65537, 524291, 6, 65537, 524292, 6, 65537, 524293, 6, 65537, 524294, 6, 65537, 524295, 6, 65537, 524296, 6, 65537, 524297, 6, 65537, 524298, 6, 65537, 524299, 6, 65537, 524300, 6, 65537, 524301, 6, 65537, 524302, 6, 65537, 524303, 6, 65537, 524304, 6, 65537, 524305, 6, 65537, 524306, 6, 65537, 524307, 6, 65537, 524308, 6, 65537, 524309, 6, 65537, 524310, 536870918, 65537, 524311, 6, 65537, 524312, 6, 65537, 524313, 6, 65537, 524314, 6, 1, 524315, 6, 1, 524316, 6, 1, 524317, 6, 1, 524318, 6, 1, 524319, 6, 1, 524320, 6, 1, 524321, 6, 1, 524322, 6, 1, 524323, 6, 2, 589824, 6, 65536, 589825, 6, 65537, 589826, 6, 65537, 589827, 6, 65537, 589828, 6, 65537, 589829, 6, 65537, 589830, 6, 65537, 589831, 6, 65537, 589832, 6, 65537, 589833, 6, 65537, 589834, 6, 65537, 589835, 6, 65537, 589836, 6, 65537, 589837, 6, 65537, 589838, 6, 65537, 589839, 6, 65537, 589840, 6, 65537, 589841, 6, 65537, 589842, 6, 65537, 589843, 6, 65537, 589844, 6, 65537, 589845, 6, 65537, 589846, 6, 65537, 589847, 6, 65537, 589848, 6, 65537, 589849, 6, 65537, 589850, 6, 65537, 589851, 6, 65537, 589852, 6, 65537, 589853, 6, 65537, 589854, 6, 65537, 589855, 6, 65537, 589856, 6, 65537, 589857, 6, 65537, 589858, 6, 65537, 589859, 6, 65538, 655360, 6, 65536, 655361, 6, 65537, 655362, 6, 65537, 655363, 6, 65537, 655364, 6, 65537, 655365, 6, 65537, 655366, 6, 65537, 655367, 6, 65537, 655368, 6, 65537, 655369, 6, 65537, 655370, 6, 65537, 655371, 6, 65537, 655372, 6, 65537, 655373, 6, 65537, 655374, 6, 65537, 655375, 6, 65537, 655376, 6, 65537, 655377, 6, 65537, 655378, 6, 65537, 655379, 6, 65537, 655380, 6, 65537, 655381, 6, 65537, 655382, 6, 65537, 655383, 6, 65537, 655384, 6, 65537, 655385, 6, 65537, 655386, 6, 65537, 655387, 6, 65537, 655388, 6, 65537, 655389, 6, 65537, 655390, 6, 65537, 655391, 6, 65537, 655392, 6, 65537, 655393, 6, 65537, 655394, 6, 65537, 655395, 6, 65538, 720896, 6, 65536, 720897, 6, 65537, 720898, 6, 65537, 720899, 6, 65537, 720900, 6, 65537, 720901, 6, 65537, 720902, 6, 65537, 720903, 6, 65537, 720904, 6, 65537, 720905, 6, 65537, 720906, 6, 65537, 720907, 6, 65537, 720908, 6, 65537, 720909, 6, 65537, 720910, 6, 65537, 720911, 6, 65537, 720912, 6, 65537, 720913, 6, 65537, 720914, 6, 65537, 720915, 6, 65537, 720916, 6, 65537, 720917, 6, 65537, 720918, 536870918, 65537, 720919, 6, 65537, 720920, 6, 65537, 720921, 6, 65537, 720922, 6, 65537, 720923, 6, 65537, 720924, 6, 65537, 720925, 6, 65537, 720926, 6, 65537, 720927, 6, 65537, 720928, 6, 65537, 720929, 6, 65537, 720930, 6, 65537, 720931, 6, 65538, 786432, 6, 131072, 786433, 6, 131073, 786434, 6, 131073, 786435, 6, 131073, 786436, 6, 131073, 786437, 6, 131073, 786438, 6, 131073, 786439, 6, 131073, 786440, 6, 131073, 786441, 6, 131073, 786442, 6, 131073, 786443, 6, 131073, 786444, 6, 131073, 786445, 6, 131073, 786446, 6, 131073, 786447, 6, 131073, 786448, 6, 131073, 786449, 6, 131073, 786450, 6, 131073, 786451, 6, 131073, 786452, 6, 131073, 786453, 6, 131073, 786454, 6, 131073, 786455, 6, 131073, 786456, 6, 131073, 786457, 6, 131073, 786458, 6, 131073, 786459, 6, 131073, 786460, 6, 131073, 786461, 6, 131073, 786462, 6, 131073, 786463, 6, 131073, 786464, 6, 131073, 786465, 6, 131073, 786466, 6, 131073, 786467, 6, 131074 )
_sections_unfolded = [ "Cell", "Collision" ]

[node name="tilemapSpike" type="TileMap" parent="." index="1"]

mode = 0
tile_set = null
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )

[node name="spawnPoint" type="Position2D" parent="." index="2"]

position = Vector2( 64, 88 )
scale = Vector2( 0.8, 0.8 )
_sections_unfolded = [ "Transform" ]

[node name="Elements" type="Node2D" parent="." index="3"]

[node name="dynamic_foliage" type="Node2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 112, 112 )
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Tween" type="Tween" parent="dynamic_foliage" index="0"]

repeat = false
playback_process_mode = 0
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="sLeft" type="Sprite" parent="dynamic_foliage" index="1"]

position = Vector2( 0, -8 )
texture = ExtResource( 4 )

[node name="sRight" type="Sprite" parent="dynamic_foliage" index="2"]

position = Vector2( 0, -8 )
texture = ExtResource( 5 )

[node name="Position2D" type="Position2D" parent="dynamic_foliage" index="3"]

[connection signal="tween_completed" from="dynamic_foliage/Tween" to="dynamic_foliage" method="_on_Tween_tween_completed"]


