[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/level1.gd" type="Script" id=1]
[ext_resource path="res://Assets/TileSets/ts_color.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/Images/entities/ent_global.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Images/JumpPad/jumpPad1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Images/tileset_dev1.png" type="Texture" id=5]

[sub_resource type="TileSet" id=13]

0/name = "Door"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 24, 24 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "Key"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( -4, -4 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 24, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "fallBlockSingle1"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 24, 16, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "fallBlockSingle1"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 16, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "ExtenderDouble"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 88, 16, 16, 8 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "Spawn"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( -8, -8 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 88, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "jumpPad1.png 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( -8, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 8, 16, 8 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0
_sections_unfolded = [ "4" ]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 4, 4 )

[sub_resource type="TileSet" id=2]

0/name = "Solid"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 4, 4 )
0/navigation_offset = Vector2( 4, 4 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 4, 4 )
} ]
0/z_index = 0
1/name = "nonSolide"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 8, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 4, 4 )
1/navigation_offset = Vector2( 4, 4 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 4, 4 )
} ]
1/z_index = 0
2/name = "Platform"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 8, 8, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 4, 4 )
2/navigation_offset = Vector2( 4, 4 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 4, 4 )
} ]
2/z_index = 0
3/name = "spike"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 8, 0, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 4, 4 )
3/navigation_offset = Vector2( 4, 4 )
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 4, 4 )
} ]
3/z_index = 0

[node name="root" type="Node2D"]
show_behind_parent = true
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]
camera_zoom = 2

[node name="fg_tile" type="TileMap" parent="."]
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 0, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 3
collision_mask = 3
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 11, 0, 1, 11, 0, 2, 11, 0, 3, 11, 0, 4, 11, 0, 5, 11, 0, 6, 11, 0, 7, 11, 0, 8, 11, 0, 9, 11, 0, 10, 11, 0, 11, 11, 0, 12, 11, 0, 13, 11, 0, 14, 11, 0, 15, 11, 0, 16, 11, 0, 17, 11, 0, 18, 11, 0, 19, 11, 0, 20, 11, 0, 21, 11, 0, 22, 11, 0, 23, 11, 0, 24, 11, 0, 25, 11, 0, 26, 11, 0, 27, 11, 0, 28, 11, 0, 29, 11, 0, 30, 11, 0, 31, 11, 0, 32, 11, 0, 33, 11, 0, 34, 11, 0, 35, 11, 0, 36, 11, 0, 37, 11, 0, 38, 11, 0, 39, 11, 0, 65536, 11, 0, 65537, 11, 0, 65538, 11, 0, 65575, 11, 0, 131072, 11, 0, 131073, 11, 0, 131074, 11, 0, 131111, 11, 0, 196608, 11, 0, 196609, 11, 0, 196610, 11, 0, 196647, 11, 0, 262144, 11, 0, 262145, 11, 0, 262146, 11, 0, 262183, 11, 0, 327680, 11, 0, 327681, 11, 0, 327682, 11, 0, 327719, 11, 0, 393216, 11, 0, 393217, 11, 0, 393218, 11, 0, 393255, 11, 0, 458752, 11, 0, 458753, 11, 0, 458754, 11, 0, 458791, 11, 0, 524288, 11, 0, 524289, 11, 0, 524290, 11, 0, 524327, 11, 0, 589824, 11, 0, 589825, 11, 0, 589826, 11, 0, 589863, 11, 0, 655360, 11, 0, 655361, 11, 0, 655362, 11, 0, 655399, 11, 0, 720896, 11, 0, 720897, 11, 0, 720898, 11, 0, 720935, 11, 0, 786432, 11, 0, 786433, 11, 0, 786434, 11, 0, 786471, 11, 0, 851968, 11, 0, 851969, 11, 0, 851970, 11, 0, 852007, 11, 0, 917504, 11, 0, 917505, 11, 0, 917506, 11, 0, 917543, 11, 0, 983040, 11, 0, 983041, 11, 0, 983042, 11, 0, 983079, 11, 0, 1048576, 11, 0, 1048577, 11, 0, 1048578, 11, 0, 1048615, 11, 0, 1114112, 11, 0, 1114113, 11, 0, 1114114, 11, 0, 1114151, 11, 0, 1179687, 11, 0, 1245223, 11, 0, 1310759, 11, 0, 1376256, 11, 0, 1376257, 11, 0, 1376258, 11, 0, 1376259, 11, 0, 1376260, 11, 0, 1376261, 11, 0, 1376262, 11, 0, 1376263, 11, 0, 1376264, 11, 0, 1376265, 11, 0, 1376266, 11, 0, 1376267, 11, 0, 1376268, 11, 0, 1376269, 11, 0, 1376270, 11, 0, 1376271, 11, 0, 1376272, 11, 0, 1376273, 11, 0, 1376274, 11, 0, 1376275, 11, 0, 1376276, 11, 0, 1376277, 11, 0, 1376278, 11, 0, 1376279, 11, 0, 1376280, 11, 0, 1376281, 11, 0, 1376282, 11, 0, 1376283, 11, 0, 1376284, 11, 0, 1376285, 11, 0, 1376286, 11, 0, 1376287, 11, 0, 1376288, 11, 0, 1376289, 11, 0, 1376290, 11, 0, 1376291, 11, 0, 1376292, 11, 0, 1376293, 11, 0, 1376294, 11, 0, 1376295, 11, 0, 1441792, 11, 0, 1441793, 11, 0, 1441794, 11, 0, 1441795, 11, 0, 1441796, 11, 0, 1441797, 11, 0, 1441798, 11, 0, 1441799, 11, 0, 1441800, 11, 0, 1441801, 11, 0, 1441802, 11, 0, 1441803, 11, 0, 1441804, 11, 0, 1441805, 11, 0, 1441806, 11, 0, 1441807, 11, 0, 1441808, 11, 0, 1441809, 11, 0, 1441810, 11, 0, 1441811, 11, 0, 1441812, 11, 0, 1441813, 11, 0, 1441814, 11, 0, 1441815, 11, 0, 1441816, 11, 0, 1441817, 11, 0, 1441818, 11, 0, 1441819, 11, 0, 1441820, 11, 0, 1441821, 11, 0, 1441822, 11, 0, 1441823, 11, 0, 1441824, 11, 0, 1441825, 11, 0, 1441826, 11, 0, 1441827, 11, 0, 1441828, 11, 0, 1441829, 11, 0, 1441830, 11, 0, 1441831, 11, 0 )
_sections_unfolded = [ "Cell", "Collision", "Occluder", "Transform", "tile_set" ]

[node name="bg_tile" type="TileMap" parent="."]
mode = 0
tile_set = null
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 3
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell", "Collision" ]

[node name="entities" type="TileMap" parent="."]
mode = 0
tile_set = SubResource( 13 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 786437, 1, 0, 786446, 6, 0, 1048590, 6, 0, 1179648, 0, 0, 1310726, 5, 0, 1310734, 6, 0 )
_sections_unfolded = [ "Cell", "tile_set" ]

[node name="fg_decals" type="TileMap" parent="."]
mode = 0
tile_set = null
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell" ]

[node name="bg_decals" type="TileMap" parent="."]
mode = 0
tile_set = SubResource( 2 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell", "tile_set" ]

[node name="objects" type="Node2D" parent="."]
_sections_unfolded = [ "Transform" ]

